syntax = "proto3";
package sdk.zkgov.v1beta1;
import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "google/api/annotations.proto";
option go_package = "github.com/vishal-kanna/zk/zk-gov/x/zkgov/types";

// Query
service Query {
  // CommitmentMerkleProof
  rpc CommitmentMerkleProof(QueryCommitmentMerkleProofRequest)
      returns (QueryCommitmentMerkleProofResponse) {
    option (google.api.http).get = "/zk-gov/{proposal_id}/{commitment}";
  }
}

// QueryCommitmentMerkleProofRequest
message QueryCommitmentMerkleProofRequest {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;
  uint64 proposal_id = 1;
  string commitment = 2;
}

// QueryCommitmentMerkleProofResponse
message QueryCommitmentMerkleProofResponse {
  repeated bytes merkle_proof = 1;
  bytes root = 2;
  uint64 commitment_index = 3;
}